--- a/todo-input/src/App.css
+++ b/todo-input/src/App.css
@@ -8,14 +8,14 @@
 } */
 
 .App-header {
-  background-color: #F2F3F5;
+  background-color: #f2f3f5;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: #F2F3F5;
+  color: #f2f3f5;
 }
 
 .App-link {
@@ -34,3 +34,12 @@ width
   width: 100%;
   height: 100%;
 }
+
+#buttontagAddNew {
+  border-radius: 15px;
+}
+
+#tabletag {
+  color: lightslategray;
+}
+
