--- a/todo-input/src/App.css
+++ b/todo-input/src/App.css
@@ -43,3 +43,13 @@ width
   color: lightslategray;
 }
 
+.todo_app .completed {
+  text-decoration: line-through;
+  color: lightslategray;
+}
+#mapremoveclass{
+  display: none;
+}
+.todo_app ul li:hover #mapremoveclass{
+  display: inline;
+}
